--- a/templates/index.html
+++ b/templates/index.html
@@ -5,74 +5,198 @@
 {% endblock %}
 {% block content %}
 <div>
+    <div class="column" style="float: left; width: 80%; margin-left: 550px;">
+            <h1>Categorical Wordclouds</h1>
+    </div>
     <div class="row">
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
-          <div class="card" id="about">
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="about" style="width: 50%; margin-left: 200px;">
             <img src={{ url[0]}} alt="Avatar" class="card-im">
-            <h2>About</h2>
-            <p class="content">WordCloud Desc </p>
+            <h2>Hate Tweets</h2>
+            <p class="content">Using 3-way classification, we obtain a wordcloud for hate tweets </p>
           </div>
         </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
-          <div class="card" id="background">
+        <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" > -->
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background" style="width: 50%; margin-left: 200px;">
             <img src={{ url[1]}} alt="Avatar" class="card-im">
-            <h2>Background</h2>
-            <p class="content"> WordCloud Desc</p>
+            <h2>Offensive Tweets</h2>
+            <p class="content"> Using 3-way classification, we obtain a wordcloud for offensive tweets</p>
           </div> 
         </div>
-        <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
-            <div class="card" id="about">
+        <!-- <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="about" style="width: 50%; margin-left: 200px;">
               <img src={{ url[2]}} alt="Avatar" class="card-im">
-              <h2>About</h2>
-              <p class="content">WordCloud Desc </p>
+              <h2>Neither Hate nor Offensive Tweets</h2>
+              <p class="content">Using 3-way classification, we obtain a wordcloud for tweets that are neither hate nor offensive </p>
             </div>
           </div>
-          <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-            <div class="card" id="background">
+          </p>
+        </details>
+        <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
+        <summary>2-way Fake Classification</summary>
+        <p>
+          <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="background" style="width: 50%; margin-left: 200px;">
               <img src={{ url[3]}} alt="Avatar" class="card-im">
-              <h2>Background</h2>
-              <p class="content"> WordCloud Desc</p>
+              <h2>True Tweets</h2>
+              <p class="content"> Using 2-way classification, we obtain a wordcloud for tweets classified as true</p>
             </div> 
           </div>
-        </div>
-        <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-          <div class="card" id="background">
+        <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background" style="width: 50%; margin-left: 200px;">
             <img src={{ url[4]}} alt="Avatar" class="card-im">
-            <h2>Background</h2>
-            <p class="content"> WordCloud Desc</p>
+            <h2>False Tweets</h2>
+            <p class="content"> Using 2-way classification, we obtain a wordcloud for tweets classified as fake</p>
           </div> 
         </div>
-      </div>
-      <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-        <div class="card" id="background">
+      </p>
+      </details>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
+      <summary>6-way Fake Classification</summary>
+      <p>
+      <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+        <div class="card" id="background" style="width: 50%; margin-left: 200px;">
           <img src={{ url[5]}} alt="Avatar" class="card-im">
-          <h2>Background</h2>
-          <p class="content"> WordCloud Desc</p>
+          <h2>Satire Tweets</h2>
+          <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as satires</p>
         </div> 
-      </div>
-    </div>
-    <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-      <div class="card" id="background">
+        </div>
+    <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+      <div class="card" id="background" style="width: 50%; margin-left: 200px;">
         <img src={{ url[6]}} alt="Avatar" class="card-im">
-        <h2>Background</h2>
-        <p class="content"> WordCloud Desc</p>
+        <h2>Misleading Tweets</h2>
+        <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as misleading</p>
       </div> 
     </div>
-  </div>
-  <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-    <div class="card" id="background">
+  <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+    <div class="card" id="background" style="width: 50%; margin-left: 200px;">
       <img src={{ url[7]}} alt="Avatar" class="card-im">
-      <h2>Background</h2>
-      <p class="content"> WordCloud Desc</p>
+      <h2>Imposter Tweets</h2>
+      <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as imposter content</p>
     </div> 
   </div>
+      <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+        <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+          <img src={{ url[5]}} alt="Avatar" class="card-im">
+          <h2>Satire Tweets</h2>
+          <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as satires</p>
+        </div> 
+        </div>
+    <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+      <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+        <img src={{ url[6]}} alt="Avatar" class="card-im">
+        <h2>Misleading Tweets</h2>
+        <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as misleading</p>
+      </div> 
+    </div>
+  <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+    <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+      <img src={{ url[7]}} alt="Avatar" class="card-im">
+      <h2>Imposter Tweets</h2>
+      <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as imposter content</p>
+    </div> 
+  </div>
+  </p>
+  </details>
+
+  <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
+        <summary>3-way Hate Classification</summary>
+        <p>
+          <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+            <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+              <img src={{ url[3]}} alt="Avatar" class="card-im">
+              <h2>True Tweets</h2>
+              <p class="content"> Using 2-way classification, we obtain a wordcloud for tweets classified as true</p>
+            </div> 
+          </div>
+        <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+            <img src={{ url[4]}} alt="Avatar" class="card-im">
+            <h2>False Tweets</h2>
+            <p class="content"> Using 2-way classification, we obtain a wordcloud for tweets classified as fake</p>
+          </div> 
+        </div>
+        <div class="column" style="margin-top: 10px;">
+          <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+            <img src={{ url[4]}} alt="Avatar" class="card-im">
+            <h2>False Tweets</h2>
+            <p class="content"> Using 2-way classification, we obtain a wordcloud for tweets classified as fake</p>
+          </div> 
+        </div>
+      </p>
+      </details>
+      <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;">
+      <summary>6-way Hate Classification</summary>
+      <p>
+      <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+        <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+          <img src={{ url[5]}} alt="Avatar" class="card-im">
+          <h2>Satire Tweets</h2>
+          <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as satires</p>
+        </div> 
+        </div>
+    <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+      <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+        <img src={{ url[6]}} alt="Avatar" class="card-im">
+        <h2>Misleading Tweets</h2>
+        <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as misleading</p>
+      </div> 
+    </div>
+  <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+    <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+      <img src={{ url[7]}} alt="Avatar" class="card-im">
+      <h2>Imposter Tweets</h2>
+      <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as imposter content</p>
+    </div> 
+  </div>
+      <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+        <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+          <img src={{ url[5]}} alt="Avatar" class="card-im">
+          <h2>Satire Tweets</h2>
+          <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as satires</p>
+        </div> 
+        </div>
+    <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 250px;"> -->
+        <div class="column" style="margin-top: 10px;">
+      <div class="card" id="background" style="width: 50%; margin-left: 200px;"> 
+        <img src={{ url[6]}} alt="Avatar" class="card-im">
+        <h2>Misleading Tweets</h2>
+        <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as misleading</p>
+      </div> 
+    </div>
+  <!-- <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;"> -->
+        <div class="column" style="margin-top: 10px;">
+    <div class="card" id="background" style="width: 50%; margin-left: 200px;">
+      <img src={{ url[7]}} alt="Avatar" class="card-im">
+      <h2>Imposter Tweets</h2>
+      <p class="content"> Using 6-way classification, we obtain a wordcloud for tweets classified as imposter content</p>
+    </div> 
+  </div>
+  </p>
+  </details>
 </div>
-<div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
-  <div class="card" id="background">
-    <img src={{ url[8]}} alt="Avatar" class="card-im">
-    <h2>Background</h2>
-    <p class="content"> WordCloud Desc</p>
-  </div> 
 </div>
-</div>
+{% endblock %}
+{% block javascript %}
+<script src="{{ url_for('static', filename='js/accordion.js') }}"></script>
 {% endblock %}
